@@ -42,6 +42,9 @@ Tests
 - Issue #15802: Fix test logic in TestMaildir.test_create_tmp. Patch
   by Serhiy Storchaka.
 
+- Issue #15557: Added a test suite for the webbrowser module, thanks
+  to Anton Barkovsky.
+
 Build
 -----
 
